Added handlers for user and made structure project
